# Thunder-Neural-Networks

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  configure  configure.ac  test1.c  test2.c  tnn.h  tnn_error.h  tnn_loss.h  tnn_module.c  tnn_module.h  tnn_module_linear.c  tnn_module_linear.h  tnn_numeric.c  tnn_numeric.h  tnn_param.c  tnn_param.h  tnn_state.c  tnn_state.h
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
src/: tnn.h  tnn_error.h  tnn_loss.c  tnn_loss.h  tnn_loss_euclidean.c  tnn_loss_euclidean.h  tnn_machine.c  tnn_machine.h  tnn_macro.h  tnn_module.c  tnn_module.h  tnn_module_bias.c  tnn_module_bias.h  tnn_module_linear.c  tnn_module_linear.h  tnn_numeric.c  tnn_numeric.h  tnn_param.c  tnn_param.h  tnn_reg.c  tnn_reg.h  tnn_reg_l1.c  tnn_reg_l1.h  tnn_reg_l2.c  tnn_reg_l2.h  tnn_state.c  tnn_state.h  tnn_trainer_class.c  tnn_trainer_class.h  tnn_trainer_class_nsgd.c  tnn_trainer_class_nsgd.h
tests/: compile.sh  test.sh  test1.c  test2.c  test3.c  test4.c  test5.c  test6.c  test7.c  test8.c  test9.c
tnn/: Makefile.am  Makefile.in  tnn_config.h.in  tnn_error.h  tnn_loss.c  tnn_loss.h  tnn_loss_euclidean.c  tnn_loss_euclidean.h  tnn_machine.c  tnn_machine.h  tnn_module.c  tnn_module.h  tnn_module_bias.c  tnn_module_bias.h  tnn_module_linear.c  tnn_module_linear.h  tnn_module_sum.c  tnn_module_sum.h  tnn_numeric.c  tnn_numeric.h  tnn_param.c  tnn_param.h  tnn_pstable.c  tnn_pstable.h  tnn_reg.c  tnn_reg.h  tnn_reg_l1.c  tnn_reg_l1.h  tnn_reg_l2.c  tnn_reg_l2.h  tnn_state.c  tnn_state.h  tnn_trainer_class.c  tnn_trainer_class.h  tnn_trainer_class_nsgd.c  tnn_trainer_class_nsgd.h
